use new post title format

--- a/content/Meetups/June 29 2024.md
+++ b/content/Meetups/June 29 2024.md
@@ -1,1 +1,9 @@
-Meetup at Waller's Coffee in Decatur from 2pm to 4pm on Saturday June 29 2024. [Get a ticket on eventbrite](https://www.eventbrite.com/e/livecode-meetup-learn-hack-play-tickets-926853001277?aff=oddtdtcreator)
+---
+title: Meetup in Decatur June 29 2024
+---
+
+Location: Waller's Coffee (decatur)
+Time: 2pm to 4pm 
+Note: Bring a computer if you can
+
+[Get a ticket on eventbrite](https://www.eventbrite.com/e/livecode-meetup-learn-hack-play-tickets-926853001277?aff=oddtdtcreator)
