Add meetup pages

--- a/content/Meetups/2023 07 22.md
+++ b/content/Meetups/2023 07 22.md
@@ -1,5 +1,5 @@
 ---
-title: First meetup! Open House
+title: Getting Ready to Rock. Learn, Hack, Play.
 date: 2023-04-22
 location: Three Taverns Brewery (decatur)
 time: 2pm to 4pm
