Backfill meetup dates

--- a/content/Meetups/2023 07 22.md
+++ b/content/Meetups/2023 07 22.md
@@ -1,10 +1,9 @@
 ---
-title: Getting Ready to Rock. Learn, Hack, Play.
-date: 2023-04-22
-location: Three Taverns Brewery (decatur)
+title: July 22 2023.  Livecode Meetup. Learn, hack, play
+date: 2023-07-22
+location: Couch Building, Georgia Tech
 time: 2pm to 4pm
 note: All are welcome, bring a computer if you can
-ticket_url: https://www.eventbrite.com/e/first-meetup-open-house-learn-hack-play-tickets-606628140097
 ---
 
 {{< event_details >}}
