Create algorave url alias

--- a/content/Meetups/2025 09 13.md
+++ b/content/Meetups/2025 09 13.md
@@ -4,6 +4,8 @@ featured_image: ""
 date: 2025-09-13
 time: 7PM - 10PM
 location: Fulton County Futures Lab, Underground Atlanta
+aliases:
+  - /rave/
 ---
 {{< algorave >}}
 
