Add lineup and flyer to algorave post

--- a/content/Events/2025-09-13 algorave.md
+++ b/content/Events/2025-09-13 algorave.md
@@ -9,10 +9,39 @@ aliases:
 ---
 {{< algorave >}}
 
+Join us for our annual Algorave, where cutting-edge technology meets pulsating beats in an electrifying fusion of live coding and music.
+
+What's an algorave?? See last year's performance [here](https://youtu.be/hYy5zodP64Q?t=2669).
+
+-=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=-
+
 **THIS EVENT IS FREE!**
 
-Join us for our annual Algorave, where cutting-edge technology meets pulsating beats in an electrifying fusion of live coding and music. This year, we’re bringing together five innovative performers who will craft sounds your brain can only imagine, in real-time. 
 
-**When:** September 13, 2025 from 7:00PM to 10:00PM
+**When**: September 13, 2025 from 7:00PM to 10:00PM
 
-**Where:** {{< pafl >}} , 88 Lower Alabama St, Underground Atlanta
+
+**Where**: {{< pafl >}}
+
+-=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=-
+
+**Lineup**
+
+Bad Cabbage - https://instagram.com/badcabbage_atl/
+
+djkumboi - https://instagram.com/khalidiab_/
+
+ericpharr
+
+ijc - https://ijc8.me
+
+modeaxe - https://instagram.com/modeaxe/
+
+thoriumcat - https://instagram.com/bryantohara_poet/
+
+-=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=- -=-=-
+
+
+**Flyer and Map**
+
+{{< algorave-flyer-2025 >}}
