Display and optimize past algorave flyers

--- a/content/Events/2023-09-15 algorave.md
+++ b/content/Events/2023-09-15 algorave.md
@@ -8,3 +8,5 @@ ticket_url: https://www.meetup.com/data-dancers/events/294130916/
 ---
 
 {{< event_details >}}
+
+{{< pafl-algorave-flyer src="/images/event-promo/pafl-algorave-2023.png" >}}
