--- a/content/Events/2024-09-14 algorave.md
+++ b/content/Events/2024-09-14 algorave.md
@@ -12,3 +12,5 @@ Join us for our annual Algorave, where cutting-edge technology meets pulsating b
 **When:** September 14, 2024 from 7:00PM to 10:00PM
 
 **Where:** {{< pafl >}} , 88 Lower Alabama St, Underground Atlanta
+
+{{< pafl-algorave-flyer src="/images/event-promo/pafl-algorave-2024.png" >}}
