--- a/content/Events/2025-09-13 algorave.md
+++ b/content/Events/2025-09-13 algorave.md
@@ -44,4 +44,4 @@ thoriumcat - https://instagram.com/bryantohara_poet/
 
 **Flyer and Map**
 
-{{< algorave-flyer-2025 >}}
+{{< pafl-algorave-flyer src="/images/event-promo/pafl-algorave-2025.png" >}}
