Rename algorave post titles

--- a/content/Events/2023-09-15 algorave.md
+++ b/content/Events/2023-09-15 algorave.md
@@ -1,5 +1,5 @@
 ---
-title: September 15 2023 ALGORAVE
+title: Public Art Futures Lab ALGORAVE!!!
 date: 2023-09-15
 location: Public Art Futures Lab
 time: 8-10pm
