--- a/content/Events/2024-09-14 algorave.md
+++ b/content/Events/2024-09-14 algorave.md
@@ -1,5 +1,5 @@
 ---
-title: Public Art Futures Lab Annual ALGORAVE!!!
+title: Public Art Futures Lab Annual ALGORAVE 2024!!!
 date: 2024-09-14
 ---
 
