Reschedule meetup to sep 27

--- a/content/Events/2025-09-27 meetup.md
+++ b/content/Events/2025-09-27 meetup.md
@@ -1,11 +1,15 @@
 ---
-title: September 20 2025 Livecode Meetup. Learn, Hack, Play.
+title: September 27 2025 Livecode Meetup. Learn, Hack, Play.
 featured_image: ""
-date: 2025-09-20
+date: 2025-09-27
 time: 1PM - 3PM
 location: Buckhead Library, 269 Buckhead Ave NE, Atlanta, GA 30305
+aliases:
+  - /2025-09-20-meetup/
 ---
-September 20 2025, 1:00pm-3:00pm
+September 27 2025, 1:00pm-3:00pm
+
+(RESCHEDULED FROM 9/20!)
 
 Livecode Meetup. Learn, Hack, Play.
 
