--- a/content/Events/2025-09-27 meetup.md
+++ b/content/Events/2025-09-27 meetup.md
@@ -1,5 +1,5 @@
 ---
-title: September 27 2025 Livecode Meetup. Learn, Hack, Play.
+title: CANCELED September 27 2025 Livecode Meetup. Learn, Hack, Play.
 featured_image: ""
 date: 2025-09-27
 time: 1PM - 3PM
@@ -7,10 +7,8 @@ location: Buckhead Library, 269 Buckhead Ave NE, Atlanta, GA 30305
 aliases:
   - /2025-09-20-meetup/
 ---
-September 27 2025, 1:00pm-3:00pm
+CANCELED September 27 2025, 1:00pm-3:00pm
 
-(RESCHEDULED FROM 9/20!)
+Unfortunately, the September 27 meetup is canceled due to meeting room unavailability.
 
-Livecode Meetup. Learn, Hack, Play.
-
-Chat about live coding, creative coding. All are welcome. Come see our new meeting location at the Buckhead library! There will be time for show-and-tell to share personal projects.
+Apologies for the late notice.
